# stm32f4xx-hal

./: .gitignore  .gitmodules  .travis.yml  BSP-CONTRIBUTION-RESPONSE.md  BSP-Update-Summary-v0.3.0.md  CHANGELOG.md  Cargo.toml  DOUBLE_BUFFER_GUIDE.md  F469_CLEANUP_PLAN.md  HAL_BSP_STATUS.md  LICENSE-0BSD.txt  LLM_GUIDE.md  README.md  STM32F469_HAL_BSP_TESTING.md  VLS_STATUS_REPORT.md  black_screen_fix.md  board_abstraction_pattern.json  build.rs  f469-disco-revc-board-support.md  feedback-all.md  feedback-prompt.md  feedback_for_v0.2.1.md  feedback_for_v2.5.md  feedback_for_v2.6.md  feedback_for_v2.7.md  feedback_for_v2.8.md  feedback_for_v2.9.md  feedback_for_v3.0.md  feedback_for_v3.1.md  feedback_for_v3.1_v3.2_combined.md  feedback_for_v3.4.md  feedback_for_v3.5.md  feedback_for_v3.6.md  feedback_for_v3.7.md  feedback_for_v3.8.md  feedback_for_v3.9.md  feedback_for_v4.0.md  feedback_for_v4.1.md  feedback_for_v4.10.md  feedback_for_v4.12.md  (+46 more)
.cargo/: config  config.toml
.github/: bors.toml
.github/workflows/: bloat.yml  changelog.yml  ci.yml  clippy.yml  rustfmt.yml
.lapce/: settings.toml
.sisyphus/: boulder.json  upstream-pr-draft.md
.sisyphus/evidence/: F3-hardware-qa-final.txt  F4-scope-fidelity.txt  f3-hardware-qa.txt  task-1-baseline-f469.txt  task-1-cargo-dep.txt  task-1-defmt-panic.txt  task-1-device-rs-deleted.txt  task-1-error-types.txt  task-1-no-local-refs.txt  task-1-swipe-diagonal.txt  task-1-touch-analysis.txt  task-1-touch-diagnostic.txt  task-2-build-defmt.txt  task-2-build-no-defmt.txt  task-2-dsi-color-fix-verified.txt  task-2-nt35510-crate.txt  task-2-sdio-scoping.txt  task-3-f469-build.txt  task-3-flash.txt  task-3-flprxlpm-fix.txt  task-4-display-removed.txt  task-4-f469-hardware.txt  task-5-f412-build.txt  task-5-full-verification.txt  task-6-examples-fixed.txt  task-6-hardware-verify.txt  task-8-soak-test.txt  upstream-notification-usb-fix.md
.sisyphus/notes/: f469-development.md
.sisyphus/plans/: align-with-c-bsp.md  board-abstraction-refactor.md  bsp-architecture-refinement.md  bsp-migration-f469.md  dep-update-f412-f413.md  embedded-graphics-hello-world.md  f412-f413-mipidsi-migration.md  f469-bug-fixes.md  f469-lcd-touch-stabilization.md  f469disco-cleanup-verify.md  fix-bsp-usb-and-commit.md  fix-touch-panic.md  hal-bsp-cleanup.md  nt35510-crate-migration.md  nt35510-pr-improvements.md  paint-touch-logging.md  pr843-submission.md  upgrade-touch-driver.md  upstream-merge.md  upstream-pr-preparation.md  vls-f469-port.md
.sisyphus/reports/: f469-display-status-report.md
.zed/: settings.json
boards/f413disco/: Cargo.toml  build.rs  memory.x
boards/f413disco/.cargo/: config.toml
boards/f429disco/: Cargo.toml  memory.x
boards/f429disco/.cargo/: config.toml
boards/f469disco/: Cargo.toml  memory.x
boards/f469disco/.cargo/: config.toml
contributions/: BSP-Developer-Prompt.md  mod.rs
examples/: adc_dma_rtic.rs  analog-stopwatch-with-spi-ssd1306.rs  blinky-timer-irq.rs  blinky.rs  can-send.rs  delay-blinky.rs  delay-syst-blinky.rs  delay-timer-blinky.rs  display-touch.rs  display_touch.rs  dwt-blinky.rs  dynamic-gpio.rs  dynamic_gpio.rs  f413disco-lcd-ferris.rs  f413disco_lcd_ferris.rs  f469disco-animated-layers.rs  f469disco-framebuffer.rs  f469disco-hello-eg.rs  f469disco-image-slider.rs  f469disco-lcd-test.rs  f469disco-paint.rs  f469disco-slideshow.rs  f469disco-touch-debug.rs  fmc-sdram.rs  fmc-sdram.rs.disabled  hd44780.rs  i2c_scanner.rs  i2s-audio-out-dma.rs  i2s-audio-out.rs  ist7920-bidi-normal-spi.rs  ist7920_bidi_normal_spi.rs  pwm-dead-time.rs  pwm-dma.rs  pwm-input.rs  pwm-sinus.rs  pwm.rs  qei.rs  qspi-w25q.rs  rng-display.rs  rtc.rs  (+46 more)
examples/cs43l22/: mod.rs
examples/f469disco/: board.rs  images.rs  nt35510.rs
examples/ltdc-screen/: main.rs  screen.rs
examples/rtic2-systick/: Cargo.toml  memory.x  rust-toolchain.toml
examples/rtic2-systick/.cargo/: config.toml
examples/rtic2-systick/src/: main.rs
nt35510/: Cargo.toml  LICENSE  README.md
nt35510/src/: lib.rs  regs.rs
src/: adc.rs  bb.rs  can.rs  crc32.rs  crc_l4.rs  dac.rs  delay.rs  dma.rs  dsi.rs  dwt.rs  flash.rs  fmc.rs  fmpi2c.rs  gpio.rs  i2c.rs  i2s.rs  lib.rs  lptimer.rs  ltdc.rs  otg_fs.rs  otg_hs.rs  pacext.rs  prelude.rs  pwm.rs  pwm_input.rs  qei.rs  qspi.rs  rcc.rs  rng.rs  rtc.rs  sai.rs  sdio.rs  serial.rs  signature.rs  signature_f3.rs  spi.rs  syscfg.rs  systick.rs  time.rs  timer.rs  (+4 more)
src/adc/: config.rs  f4.rs  f7.rs  l4.rs
src/delay/: hal_02.rs  hal_1.rs  mod.rs  syst.rs  timer.rs
src/display/: f469disco.rs  framebuffer.rs  mod.rs  nt35510.rs  sdram.rs  spi.rs
src/dma/: buffer.rs  mod.rs  traits.rs
src/flash/: f4.rs  f7.rs  l4.rs
src/fmpi2c/: hal_02.rs  hal_1.rs
src/fsmc_lcd/: display_interface_impl.rs  mod.rs  pins.rs  sealed.rs  timing.rs
src/fugit/: counter.rs  delay.rs  hal_02.rs  hal_1.rs  mod.rs  monotonic.rs  pwm.rs  syscounter.rs
src/gpio/: alt.rs  c0.rs  convert.rs  dynamic.rs  erased.rs  exti.rs  f0.rs  f2.rs  f3.rs  f4.rs  f7.rs  g0.rs  g4.rs  h7.rs  hal_02.rs  hal_1.rs  l0.rs  l1.rs  l4.rs  l4p.rs  l5.rs  outport.rs  partially_erased.rs  u5.rs  wb.rs  wl.rs
src/i2c/: common.rs  dma.rs  f7.rs  hal_02.rs  hal_1.rs  l4.rs
src/pacext/: uart.rs  uart_v2.rs  uart_v3.rs
src/pwr/: l4.rs
src/qspi/: f7.rs  l4.rs
src/rcc/: enable.rs  f0.rs  mod.rs  pll.rs
src/serial/: config.rs  dma.rs  ext.rs  hal_02.rs  hal_1.rs  uart_impls.rs
src/spi/: hal_02.rs  hal_1.rs
src/timer/: capture.rs  capture_compare.rs  counter.rs  delay.rs  hal_02.rs  hal_1.rs  monotonic.rs  monotonics.rs  pins.rs  pwm.rs  pwm_input.rs  (+1 more)
stm32f469i-disc/: Cargo.toml  Embed.toml  LICENSE-0BSD.txt  README.md  build.rs  memory.x
stm32f469i-disc/.cargo/: config.toml
stm32f469i-disc/docs/: PIN-CONSUMPTION.md  USB-GUIDE.md
stm32f469i-disc/examples/: display_dsi_lcd.rs  display_hello_eg.rs  display_touch.rs  fmc_sdram_test.rs  gpio_hal_blinky.rs  usb_cdc_serial.rs
stm32f469i-disc/src/: button.rs  lcd.rs  led.rs  lib.rs  sdio.rs  sdram.rs  touch.rs  usb.rs
tools/: check.py  f469disco-display-build.sh
xtask/: Cargo.toml
(+53 files in other folders)
