[package]
edition = "2021"
rust-version = "1.62"

authors = ["Daniel Egger <daniel@eggers-club.de>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for STM32F4 series microcontrollers"
documentation = "https://docs.rs/stm32f4xx-hal"
keywords = ["arm", "cortex-m", "stm32f4xx", "hal"]
license = "0BSD"
name = "stm32f4xx-hal"
readme = "README.md"
repository = "https://github.com/stm32-rs/stm32f4xx-hal"
version = "0.21.0"

[package.metadata.docs.rs]
features = [
    "stm32f429",
    "usb_fs",
    "can",
    "i2s",
    "fsmc_lcd",
    "rtic1",
    "defmt",
    "sdio-host",
]
targets = ["thumbv7em-none-eabihf"]

[dependencies]
defmt = { version = "0.3.5", optional = true }
bxcan = { version = "0.7", optional = true }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
nb = "1.1"
rand_core = "0.6.4"
synopsys-usb-otg = { version = "0.4.0", features = [
    "cortex-m",
], optional = true }
sdio-host = { version = "0.9.0", optional = true }
embedded-dma = "0.2.0"
bare-metal = { version = "1" }
void = { default-features = false, version = "1.0.2" }
display-interface = { version = "0.5.0", optional = true }
display-interface-04 = { package = "display-interface", version = "0.4.1", optional = true }
fugit = "0.3.7"
fugit-timer = "0.1.3"
# rtic1
rtic-monotonic = { version = "1.0", optional = true }
systick-monotonic = { version = "1.0.1", optional = true }
cortex-m-rtic = { version = "1.1.4", features = [
    "test-critical-section",
], optional = true }
# rtic2
rtic-time = { version = "2.0", optional = true }
embedded-hal-async = { version = "1.0", optional = true }
rtic = { version = "2.0.1", features = ["thumbv7-backend"], optional = true }
atomic-polyfill = { version = "1.0.3", optional = true }

stm32-fmc = { version = "0.3.0", optional = true }

enumflags2 = "0.7.8"
embedded-storage = "0.3"
vcell = "0.1.3"
document-features = "0.2"

micromath = { version = "2.1.0", optional = true }

[dependencies.stm32f4]
git = "https://github.com/stm32-rs/stm32-rs-nightlies"
features = ["defmt", "atomics"]
optional = true

[dependencies.stm32f7]
git = "https://github.com/stm32-rs/stm32-rs-nightlies"
features = ["defmt", "atomics"]
optional = true

[dependencies.time]
version = "0.3.14"
default-features = false

[dependencies.embedded-hal-02]
package = "embedded-hal"
version = "0.2.7"
features = ["unproven"]

[dependencies.embedded-hal]
version = "1.0"

[dependencies.embedded-hal-nb]
version = "1.0"

[dependencies.embedded-io]
version = "0.6.1"

[dependencies.stm32_i2s_v12x]
version = "0.5.0"
optional = true

[dev-dependencies]
defmt = "0.3.4"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
panic-semihosting = "0.6.0"
cortex-m-semihosting = "0.5.0"
heapless = "0.8"
panic-halt = "0.2.0"
ssd1306 = "0.8.4"
embedded-graphics = "0.8.1"
embedded-graphics-07 = { package = "embedded-graphics", version = "0.7.1" }
usb-device = "0.3.1"
usbd-serial = "0.2.0"
micromath = "2"
dwt-systick-monotonic = "1.1"
st7789 = "0.7.0"
rtt-target = { version = "0.5.0" }
display-interface-spi = "0.4.1"
ist7920 = "0.1.1"
smart-leds = "0.3.0"
ws2812-spi = { version = "0.4.0", features = [] }
hd44780-driver = "0.4.0"
display-interface = "0.5"
display-interface-04 = { package = "display-interface", version = "0.4.1" }
ft6x06 = "0.1.2"
ushell = "0.3.5"

[dev-dependencies.time]
version = "0.3"
default-features = false
features = ["macros"]

[features]
f4 = ["dep:stm32f4", "bb", "dma", "i2c_v1", "spi_v1", "uart_v2"]
f7 = [
    "dep:stm32f7",
    "dep:micromath",
    "dep:stm32-fmc",
    "dma",
    "i2c_v2",
    "spi_v2",
    "uart_v3",
]

# F4

#! Use one of the supported STM32-serie related features:
#! `stm32f401`, `stm32f405`, `stm32f407`, `stm32f415`, `stm32f417`, `stm32f410`,
#! `stm32f411`, `stm32f412`, `stm32f413`, `stm32f423`, `stm32f427`, `stm32f429`,
#! `stm32f437`, `stm32f439`, `stm32f446`, `stm32f469`, `stm32f479`.

# Note: stm32f4 has only one feature for some very similar device families,
# so it's intended for e.g. stm32f405/415 to both enable stm32f4/stm32f405.
stm32f401 = ["svd-f401"]
stm32f405 = ["svd-f405"]
stm32f407 = ["svd-f407"]
stm32f415 = ["svd-f405", "cryp"]
stm32f417 = ["svd-f407", "cryp"]
stm32f410 = ["svd-f410"]
stm32f411 = ["svd-f411"]
stm32f412 = ["svd-f412"]
stm32f413 = ["svd-f413"]
stm32f423 = ["svd-f413", "aes"]
stm32f427 = ["svd-f427"]
stm32f429 = ["svd-f429"]
stm32f437 = ["svd-f427", "cryp"]
stm32f439 = ["svd-f429", "cryp"]
stm32f446 = ["svd-f446"]
stm32f469 = ["svd-f469"]
stm32f479 = ["svd-f469", "cryp"]

svd-f401 = ["f4", "stm32f4?/stm32f401", "gpio-f401"]
svd-f405 = ["f4", "stm32f4?/stm32f405", "gpio-f417"]
svd-f407 = ["f4", "stm32f4?/stm32f407", "gpio-f417"]
svd-f410 = ["f4", "stm32f4?/stm32f410", "gpio-f410"]
svd-f411 = ["f4", "stm32f4?/stm32f411", "gpio-f411"]
svd-f412 = ["f4", "stm32f4?/stm32f412", "gpio-f412"]
svd-f413 = ["f4", "stm32f4?/stm32f413", "gpio-f413"]
svd-f427 = ["f4", "stm32f4?/stm32f427", "gpio-f427", "fsmc"]
svd-f429 = ["f4", "stm32f4?/stm32f429", "gpio-f427", "fmc"]
svd-f446 = ["f4", "stm32f4?/stm32f446", "gpio-f446"]
svd-f469 = ["f4", "stm32f4?/stm32f469", "gpio-f469"]

gpio-f401 = [
    "gpioc",
    "gpiod",
    "gpioe",
    "i2c2",
    "i2c3",
    "i2s",
    "i2s2",
    "i2s2ext",
    "i2s3",
    "i2s3ext",
    "rtc",
    "sdio",
    "spi1",
    "spi2",
    "spi3",
    "spi4",
    "sys",
    "tim1",
    "tim10",
    "tim11",
    "tim2",
    "tim3",
    "tim4",
    "tim5",
    "tim9",
    "usart1",
    "usart2",
    "usart6",
]
gpio-f410 = [
    "fmpi2c1",
    "gpioc",
    "i2c2",
    "i2s",
    "i2s1",
    "i2s2",
    "i2s5",
    "lptim1",
    "rtc",
    "spi1",
    "spi2",
    "spi5",
    "sys",
    "tim1",
    "tim11",
    "tim5",
    "tim6",
    "tim9",
    "usart1",
    "usart2",
    "usart6",
]
gpio-f411 = [
    "otg-fs",
    "gpioc",
    "gpiod",
    "gpioe",
    "i2c2",
    "i2c3",
    "i2s",
    "i2s1",
    "i2s2",
    "i2s3",
    "i2s4",
    "i2s5",
    "rtc",
    "sdio",
    "spi1",
    "spi2",
    "spi3",
    "spi4",
    "spi5",
    "sys",
    "tim1",
    "tim10",
    "tim11",
    "tim2",
    "tim3",
    "tim4",
    "tim5",
    "tim9",
    "usart1",
    "usart2",
    "usart6",

]
gpio-f412 = [
    "otg-fs",
    "rng",
    "can1",
    "can2",
    "dfsdm1",
    "fmpi2c1",
    "fsmc",
    "gpioc",
    "gpiod",
    "gpioe",
    "gpiof",
    "gpiog",
    "i2c2",
    "i2c3",
    "i2s",
    "i2s1",
    "i2s2",
    "i2s3",
    "i2s4",
    "i2s5",
    "quadspi",
    "rtc",
    "sdio",
    "spi1",
    "spi2",
    "spi3",
    "spi4",
    "spi5",
    "sys",
    "tim1",
    "tim10",
    "tim11",
    "tim12",
    "tim13",
    "tim14",
    "tim2",
    "tim3",
    "tim4",
    "tim5",
    "tim6",
    "tim7",
    "tim8",
    "tim9",
    "usart1",
    "usart2",
    "usart3",
    "usart6",
]
gpio-f413 = [
    "otg-fs",
    "rng",
    "aes",
    "can1",
    "can2",
    "can3",
    "dfsdm1",
    "dfsdm2",
    "fmpi2c1",
    "fsmc",
    "gpioc",
    "gpiod",
    "gpioe",
    "gpiof",
    "gpiog",
    "i2c2",
    "i2c3",
    "i2s",
    "i2s1",
    "i2s2",
    "i2s3",
    "i2s4",
    "i2s5",
    "lptim1",
    "quadspi",
    "rtc",
    "sai1",
    "sdio",
    "spi1",
    "spi2",
    "spi3",
    "spi4",
    "spi5",
    "sys",
    "tim1",
    "tim10",
    "tim11",
    "tim12",
    "tim13",
    "tim14",
    "tim2",
    "tim3",
    "tim4",
    "tim5",
    "tim6",
    "tim7",
    "tim8",
    "tim9",
    "uart10",
    "uart4",
    "uart5",
    "uart7",
    "uart8",
    "uart9",
    "usart1",
    "usart2",
    "usart3",
    "usart6",
]
gpio-f417 = [
    "adc2",
    "adc3",
    "otg-fs",
    "otg-hs",
    "rng",
    "can1",
    "can2",
    "dcmi",
    "eth",    #"fsmc",
    "gpioc",
    "gpiod",
    "gpioe",
    "gpiof",
    "gpiog",
    "gpioh",
    "gpioi",
    "i2c2",
    "i2c3",
    "i2s",
    "i2s2",
    "i2s3",
    "rtc",
    "sdio",
    "spi1",
    "spi2",
    "spi3",
    "sys",
    "tim1",
    "tim10",
    "tim11",
    "tim12",
    "tim13",
    "tim14",
    "tim2",
    "tim3",
    "tim4",
    "tim5",
    "tim6",
    "tim7",
    "tim8",
    "tim9",
    "uart4",
    "uart5",
    "usart1",
    "usart2",
    "usart3",
    "usart6",
]
gpio-f427 = [
    "adc2",
    "adc3",
    "dma2d",
    "otg-fs",
    "otg-hs",
    "rng",
    "can1",
    "can2",
    "dcmi",
    "eth",
    "gpioc",
    "gpiod",
    "gpioe",
    "gpiof",
    "gpiog",
    "gpioh",
    "gpioi",
    "gpioj",
    "gpiok",
    "i2c2",
    "i2c3",
    "i2s",
    "i2s2",
    "i2s3",
    "ltdc",
    "rtc",
    "sai1",
    "sdio",
    "spi1",
    "spi2",
    "spi3",
    "spi4",
    "spi5",
    "spi6",
    "sys",
    "tim1",
    "tim10",
    "tim11",
    "tim12",
    "tim13",
    "tim14",
    "tim2",
    "tim3",
    "tim4",
    "tim5",
    "tim6",
    "tim7",
    "tim8",
    "tim9",
    "uart4",
    "uart5",
    "uart7",
    "uart8",
    "usart1",
    "usart2",
    "usart3",
    "usart6",
]
gpio-f446 = [
    "adc2",
    "adc3",
    "otg-fs",
    "otg-hs",
    "can1",
    "can2",
    "dcmi",
    "fmc",
    "fmpi2c1",
    "gpioc",
    "gpiod",
    "gpioe",
    "gpiof",
    "gpiog",
    "i2c2",
    "i2c3",
    "i2s",
    "i2s1",
    "i2s2",
    "i2s3",
    "quadspi",
    "rtc",
    "sai1",
    "sai2",
    "spdifrx",
    "spi1",
    "spi2",
    "spi3",
    "spi4",
    "sys",
    "tim1",
    "tim10",
    "tim11",
    "tim12",
    "tim13",
    "tim14",
    "tim2",
    "tim3",
    "tim4",
    "tim5",
    "tim6",
    "tim7",
    "tim8",
    "tim9",
    "uart4",
    "uart5",
    "usart1",
    "usart2",
    "usart3",
    "usart6",
    "sdio",

]
gpio-f469 = [
    "adc2",
    "adc3",
    "dma2d",
    "otg-fs",
    "otg-hs",
    "rng",
    "can1",
    "can2",
    "dcmi",
    "dsihost",
    "eth",
    "fmc",
    "gpioc",
    "gpiod",
    "gpioe",
    "gpiof",
    "gpiog",
    "gpioh",
    "gpioi",
    "gpioj",
    "gpiok",
    "i2c2",
    "i2c3",
    "i2s",
    "i2s2",
    "i2s3",
    "ltdc",
    "quadspi",
    "rtc",
    "sai1",
    "sdio",
    "spi1",
    "spi2",
    "spi3",
    "spi4",
    "spi5",
    "spi6",
    "sys",
    "tim1",
    "tim10",
    "tim11",
    "tim12",
    "tim13",
    "tim14",
    "tim2",
    "tim3",
    "tim4",
    "tim5",
    "tim6",
    "tim7",
    "tim8",
    "tim9",
    "uart4",
    "uart5",
    "uart7",
    "uart8",
    "usart1",
    "usart2",
    "usart3",
    "usart6",
]

# F7

stm32f722 = ["svd-f7x2"]
stm32f723 = ["svd-f7x3", "usb_hs_phy"]
stm32f730 = ["svd-f730", "usb_hs_phy"]
stm32f732 = ["svd-f7x2"]
stm32f733 = ["svd-f7x3", "usb_hs_phy"]
stm32f745 = ["svd-f745"]
stm32f746 = ["svd-f7x6"]
stm32f756 = ["svd-f7x6"]
stm32f765 = ["svd-f765"]
stm32f767 = ["svd-f7x7"]
stm32f769 = ["svd-f7x9"]
stm32f777 = ["svd-f7x7"]
stm32f778 = ["svd-f7x9"]
stm32f779 = ["svd-f7x9"]

svd-f7x2 = ["f7", "stm32f7?/stm32f7x2", "gpio-f72x"]
svd-f7x3 = ["f7", "stm32f7?/stm32f7x3", "gpio-f72x"]
svd-f730 = ["f7", "stm32f7?/stm32f730", "gpio-f72x"]
svd-f745 = ["f7", "stm32f7?/stm32f745", "gpio-f746"]
svd-f7x6 = ["f7", "stm32f7?/stm32f7x6", "gpio-f746"]
svd-f765 = ["f7", "stm32f7?/stm32f765", "gpio-f76x"]
svd-f7x7 = ["f7", "stm32f7?/stm32f7x7", "gpio-f76x"]
svd-f7x9 = ["f7", "stm32f7?/stm32f7x9", "gpio-f76x"]

gpio-f72x = [
    "adc2",
    "adc3",
    "aes",
    "can1",
    "fmc",
    "gpioc",
    "gpiod",
    "gpioe",
    "gpiof",
    "gpiog",
    "gpioh",
    "gpioi",
    "i2c2",
    "i2c3",
    "i2s",
    "i2s1",
    "i2s2",
    "i2s3",
    "lptim1",
    "quadspi",
    "rtc",
    "sai1",
    "sai2",
    "sdmmc1",
    "sdmmc2",
    "spi1",
    "spi2",
    "spi3",
    "spi4",
    "spi5",
    "sys",
    "tim1",
    "tim10",
    "tim11",
    "tim12",
    "tim13",
    "tim14",
    "tim2",
    "tim3",
    "tim4",
    "tim5",
    "tim8",
    "tim9",
    "uart4",
    "uart5",
    "uart7",
    "uart8",
    "usart1",
    "usart2",
    "usart3",
    "usart6",
    "otg-fs",
    "otg-hs",
]
gpio-f746 = [
    "adc2",
    "adc3",
    "dma2d",
    "can1",
    "can2",
    "cryp",
    "dcmi",
    "eth",
    "fmc",
    "gpioc",
    "gpiod",
    "gpioe",
    "gpiof",
    "gpiog",
    "gpioh",
    "gpioi",
    "gpioj",
    "gpiok",
    "hash",
    "i2c2",
    "i2c3",
    "i2c4",
    "i2s",
    "i2s1",
    "i2s2",
    "i2s3",
    "lptim1",
    "ltdc",
    "quadspi",
    "rtc",
    "sai1",
    "sai2",
    "sdmmc1",
    "spdifrx",
    "spi1",
    "spi2",
    "spi3",
    "spi4",
    "spi5",
    "spi6",
    "sys",
    "tim1",
    "tim10",
    "tim11",
    "tim12",
    "tim13",
    "tim14",
    "tim2",
    "tim3",
    "tim4",
    "tim5",
    "tim8",
    "tim9",
    "uart4",
    "uart5",
    "uart7",
    "uart8",
    "usart1",
    "usart2",
    "usart3",
    "usart6",
    "otg-fs",
    "otg-hs",
]
gpio-f76x = [
    "adc2",
    "adc3",
    "dma2d",
    "can1",
    "can2",
    "cryp",
    "can3",
    "dcmi",
    "dfsdm1",
    "dsihost",
    "eth",
    "fmc",
    "gpioc",
    "gpiod",
    "gpioe",
    "gpiof",
    "gpiog",
    "gpioh",
    "gpioi",
    "gpioj",
    "gpiok",
    "hash",
    "i2c2",
    "i2c3",
    "i2c4",
    "i2s",
    "i2s1",
    "i2s2",
    "i2s3",
    "lptim1",
    "ltdc",
    "mdios",
    "quadspi",
    "rtc",
    "sai1",
    "sai2",
    "sdmmc1",
    "sdmmc2",
    "spdifrx",
    "spi1",
    "spi2",
    "spi3",
    "spi4",
    "spi5",
    "spi6",
    "sys",
    "tim1",
    "tim10",
    "tim11",
    "tim12",
    "tim13",
    "tim14",
    "tim2",
    "tim3",
    "tim4",
    "tim5",
    "tim8",
    "tim9",
    "uart4",
    "uart5",
    "uart7",
    "uart8",
    "usart1",
    "usart2",
    "usart3",
    "usart6",
    "otg-fs",
    "otg-hs",
]


## Support monotonic timers and other stuff that can be used by [RTICv1 framework](https://crates.io/crates/cortex-m-rtic)
rtic1 = ["dep:rtic-monotonic", "dep:systick-monotonic", "cortex-m-rtic"]

## Support monotonic timers and other stuff that can be used by [RTICv2 framework](https://crates.io/crates/rtic)
##
## Requires nightly rust compiler
rtic2 = [
    "dep:rtic-time",
    "dep:rtic",
    "dep:atomic-polyfill",
    "dep:embedded-hal-async",
]
rtic-tim2 = []
rtic-tim3 = []
rtic-tim4 = []
rtic-tim5 = []

## Implementation of `defmt::Format` for public enums and structures. See [defmt](https://crates.io/crates/defmt)
defmt = ["dep:defmt", "fugit/defmt", "nb/defmt-0-3"]

## bxCAN peripheral support. See [bxcan](https://crates.io/crates/bxcan)
can = ["dep:bxcan"]

## I2S peripheral support. See [stm32_i2s_v12x](https://crates.io/crates/stm32_i2s_v12x)
i2s = ["dep:stm32_i2s_v12x"]

## USB OTG-FS peripheral support. See [synopsys-usb-otg](https://crates.io/crates/synopsys-usb-otg)
usb_fs = ["dep:synopsys-usb-otg", "synopsys-usb-otg/fs"]
## USB OTG-HS peripheral support. See [synopsys-usb-otg](https://crates.io/crates/synopsys-usb-otg)
usb_hs = ["dep:synopsys-usb-otg", "synopsys-usb-otg/hs"]

## LCD support via FMC/FSMC peripheral. See [display-interface](https://crates.io/crates/display-interface)
fsmc_lcd = ["dep:display-interface", "dep:display-interface-04"]

## SDIO peripheral support. See [sdio-host](https://crates.io/crates/sdio-host)
sdio-host = ["dep:sdio-host"]

bb = []
dma = []
i2c_v1 = []
i2c_v2 = []
spi_v1 = []
spi_v2 = []
uart_v2 = []
uart_v3 = []
usb_hs_phy = []
dfsdm = []
sai = []

adc2 = []
adc3 = []
adf1 = []
aes = []
can1 = []
can2 = []
can3 = []
cryp = []
cm4 = []
crs1 = []
comp1 = []
comp2 = []
comp3 = []
comp4 = []
comp5 = []
comp6 = []
comp7 = []
crs = []
dac = []
dcmi = []
debug = []
dfsdm1 = ["dfsdm"]
dfsdm2 = ["dfsdm"]
dma2d = []
dsihost = []
hash = []
eth = []
fdcan1 = []
fdcan2 = []
fdcan3 = []
fmc = []
fsmc = []
fmpi2c1 = ["dep:micromath"]
gpioc = []
gpiod = []
gpioe = []
gpiof = []
gpiog = []
gpioh = []
gpioi = []
gpioj = []
gpiok = []
hdmi = []
hrtim1 = []
hspi1 = []
i2c2 = []
i2c3 = []
i2c4 = []
i2c5 = []
i2c6 = []
i2s1 = []
i2s2 = []
i2s2ext = []
i2s3 = []
i2s3ext = []
i2s4 = []
i2s5 = []
i2s6 = []
ir = []
lcd = []
lptim1 = []
lptim2 = []
lptim3 = []
lptim4 = []
lptim5 = []
lpuart1 = []
lpuart2 = []
ltdc = ["dep:micromath"]
mdios = []
mdf1 = []
quadspi = []
octospi = []
opamp2 = []
otg-fs = []
otg-hs = []
pssi = []
pwr = []
rf = []
rng = []
rtc = []
sai1 = ["sai"]
sai2 = ["sai"]
sai3 = []
sai4 = []
sdio = []
sdmmc1 = []
sdmmc2 = []
spi1 = []
spi2 = []
spi3 = []
spi4 = []
spi5 = []
spi6 = []
sys = []
spdifrx = []
swpmi1 = []
tim1 = []
tim2 = []
tim3 = []
tim4 = []
tim5 = []
tim6 = []
tim7 = []
tim8 = []
tim9 = []
tim10 = []
tim11 = []
tim12 = []
tim13 = []
tim14 = []
tim15 = []
tim16 = []
tim17 = []
tim19 = []
tim20 = []
tim21 = []
tim22 = []
tim23 = []
tim24 = []
timx = []
ts = []
tsc = []
ucpd1 = []
ucpd2 = []
usart1 = []
usart2 = []
usart3 = []
usart4 = []
usart5 = []
usart6 = []
usart7 = []
usart8 = []
usart10 = []
uart4 = []
uart5 = []
uart7 = []
uart8 = []
uart9 = []
uart10 = []
usb = []                 # "dep:stm32-usbd"
v_ref = []

disabled = []

[profile.dev]
debug = true
lto = true

[profile.release]
debug = true
lto = true
opt-level = "s"

# Keep examples sorted

[[example]]
name = "analog-stopwatch-with-spi-ssd1306"
required-features = ["f4", "spi4", "tim2", "gpioe", "gpiog"] # stm32f429

[[example]]
name = "blinky-timer-irq"
required-features = ["tim2"] # stm32f411

[[example]]
name = "can-send"
required-features = ["can", "stm32f405"]

[[example]]
name = "delay-syst-blinky"
required-features = []     # stm32f411

[[example]]
name = "delay-timer-blinky"
required-features = []      # stm32f411

[[example]]
name = "display-touch"
required-features = ["fsmc_lcd", "stm32f412"] #or stm32f413

[[example]]
name = "dwt-blinky"
required-features = ["gpiog"] # "stm32f429"

[[example]]
name = "dynamic-gpio"
required-features = []

[[example]]
name = "f413disco-lcd-ferris"
required-features = [
    "gpiod",
    "gpioe",
    "gpiof",
    "gpiog",
    "fsmc",
    "fsmc_lcd",
] # stm32f413

[[example]]
name = "hd44780"
required-features = []

[[example]]
name = "i2s-audio-out"
required-features = ["stm32f411", "i2s"]

[[example]]
name = "ist7920-bidi-normal-spi"
required-features = []

[[example]]
name = "pwm"
required-features = []

[[example]]
name = "pwm-input"
required-features = ["tim8"] # stm32f446

[[example]]
name = "pwm-sinus"
required-features = ["stm32f411"]

[[example]]
name = "qei"
required-features = ["tim2"] # stm32f411

[[example]]
name = "qspi-w25q"
required-features = ["stm32f412"]

[[example]]
name = "rng-display"
required-features = ["rng"] # stm32f407

[[example]]
name = "rtc"
required-features = ["f4"]

[[example]]
name = "rtc_alarm"
required-features = ["stm32f411"]

[[example]]
name = "rtic-adc-dma"
required-features = ["rtic1", "f4"] # stm32f401

[[example]]
name = "rtic-button"
required-features = ["stm32f411", "rtic1"] # stm32f411

[[example]]
name = "rtic-i2s-audio-in-out"
required-features = ["stm32f411", "i2s", "rtic1"]

[[example]]
name = "rtic-dual-i2s-audio-in-out"
required-features = ["stm32f411", "i2s", "rtic1"]

[[example]]
name = "rtic-serial-dma-rx-idle"
required-features = ["stm32f411", "rtic1"]

[[example]]
name = "rtic-spi-slave-dma"
required-features = ["stm32f411", "rtic1"]

[[example]]
name = "rtic-tick"
required-features = ["tim2", "rtic1"]

[[example]]
name = "rtic2-tick"
required-features = ["rtic2", "rtic-tim3"]

[[example]]
name = "rtic-usart-shell"
required-features = ["stm32f411", "rtic1"] # stm32f411

[[example]]
name = "rtic-usart-shell-ssd1306"
required-features = ["stm32f411", "rtic1"] # stm32f411

[[example]]
name = "rtic-usb-cdc-echo"
required-features = ["stm32f411", "rtic1", "otg-fs", "usb_fs"] # stm32f411

[[example]]
name = "sai-duplex"
required-features = ["stm32f429"]

[[example]]
name = "sd"
required-features = ["gpiod", "sdio", "sdio-host"] # stm32f405

[[example]]
name = "serial"
required-features = []

[[example]]
name = "serial-9bit"
required-features = ["gpiod"] # stm32f411

[[example]]
name = "serial-dma"
required-features = ["stm32f407"]

[[example]]
name = "spi-dma"
required-features = ["stm32f411"]

[[example]]
name = "uart-dma"
required-features = ["stm32f405"]

[[example]]
name = "spi_16"
required-features = ["gpiod"]

[[example]]
name = "ssd1306-image"
required-features = [] # stm32f411

[[example]]
name = "st7789-lcd"
required-features = ["fsmc", "fsmc_lcd"] # stm32f412

[[example]]
name = "stopwatch-with-ssd1306-and-interrupts"
required-features = ["tim2"]                   # stm32f411

[[example]]
name = "stopwatch-with-ssd1306-and-interrupts-and-dma-i2c"
required-features = ["tim2", "stm32f411"]                  # stm32f411

[[example]]
name = "ltdc-screen"
required-features = ["stm32f429"]

[[example]]
name = "timer-periph"
required-features = []

[[example]]
name = "timer-syst"
required-features = []

[[example]]
name = "usb-serial-irq"
required-features = ["otg-fs", "usb_fs"] # stm32f407

[[example]]
name = "usb-serial-poll"
required-features = ["otg-fs", "usb_fs", "f4"] # stm32f401

[[example]]
name = "ws2812-spi"
required-features = []
